k8s/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-dts
  labels:
    istio-injection: disabled
