k8s/istio/istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-system
  namespace: istio-dts
spec:
  rules:
  - host: grafana.dts.local
    http:
      paths:
      - path: /*
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: tracing.dts.local
    http:
      paths:
      - path: /*
        backend:
          serviceName: tracing
          servicePort: 9411
  - host: metrics.dts.local
    http:
      paths:
      - path: /*
        backend:
          serviceName: prometheus
          servicePort: 9090
  - host: kiali.dts.local
    http:
      paths:
      - path: /*
        backend:
          serviceName: kiali
          servicePort: 20001
